deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmrxiv-doc-gke-deployment
  labels:
    app: nmrxiv-docs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nmrxiv-docs
  template:
    metadata:
      labels:
        app: nmrxiv-docs
    spec:
      containers:
      - name: nmrxiv-docs
        image: eu.gcr.io/chemotion-eln-playground/nmrxiv-docs:$GITHUB_SHA
#        resources:
#          requests:
#            cpu: 100m
#          limits:
#            cpu: 100m
