service.yml
apiVersion: v1
kind: Service
metadata:
  name: nmrxiv-doc-gke-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nmrxiv-docs
