nmrxiv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nmrxiv-ingress
  annotations:
    networking.gke.io/managed-certificates: certifcate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: nmrxiv-docs-gke-service
      port:
        number: 80
